Layout Content Part 1
Completing Content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <!-- Start header -->
+
     <div class="header">
       <div class="slider">
         <div class="container">
@@ -28,5 +30,111 @@
         </div>
       </div>
     </div>
+
+    <!-- End header -->
+
+    <!-- Start Features -->
+
+    <div class="features">
+      <div class="container">
+        <div class="feat">
+          <h2>Goals</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris. </p>
+        </div>
+        <div class="feat">
+          <h2>Values</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris. </p>
+        </div>
+        <div class="feat">
+          <h2>Hobbies</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris. </p>
+        </div>
+      </div>
+    </div>
+    <!-- End Features -->
+
+    <!-- Start About Me  -->
+
+    <div class="about-me">
+      <div class="container">
+        <div class="image">
+          <img src="http://placehold.it/300x300" alt="Test Image">
+        </div>
+        <div class="infos">
+          <h2>About Me</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+          <div class="hobbies">
+            <div>Web Design</div>
+            <div>Grafic Design</div>
+            <div>Online Marketing</div>
+            <div>Seo</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End About Me -->
+
+    <!-- Start My Skills -->
+
+    <div class="my-skills">
+      <div class="container">
+        <div class="skills">
+          <h2>My Skills</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+          <button>Contact Me</button>
+        </div>
+        <div class="progress">
+          this is my progress
+        </div>
+      </div>
+    </div>
+
+    <!-- End My Skills -->
+
+    <!-- Start Resume -->
+
+    <div class="resume">
+      <div class="container">
+        <h2>Resume</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+        <button>Download Resume</button>
+      </div>
+    </div>
+    <!-- End Resume -->
+
+    <!-- Start My Education -->
+
+    <div class="my-education">
+      <div class="container">
+        <div class="main">
+          <h2>My Education</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+        </div>
+        <div class="experience">
+          Some Experience
+        </div>
+        <div class="clearfix"></div>
+        <hr>
+        <div class="main">
+          <h2>Work Experience</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+        </div>
+        <div class="experience">
+          Some Experience
+        </div>
+      </div>
+    </div>
+
+    <!-- End My Education -->
+
+    <!-- Start Testimonials -->
+
+    <div class="testimonials">
+      <div class="container">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+        <h3>Adel</h3>
+      </div>
+    </div>
+    <!-- End Testimonials -->
   </body>
 </html>
