--- a/index.html
+++ b/index.html
@@ -136,5 +136,52 @@
       </div>
     </div>
     <!-- End Testimonials -->
+
+    <!-- Start Portfolio -->
+
+    <div class="portfolio">
+      <div class="container">
+        <h2>Portfolio</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+          <div class="our-work">
+          <div><img src="images/350x350.png" alt=""></div>
+          <div><img src="images/350x350.png" alt=""></div>
+          <div><img src="images/350x350.png" alt=""></div>
+          <div><img src="images/350x350.png" alt=""></div>
+          <div><img src="images/350x350.png" alt=""></div>
+          <div><img src="images/350x350.png" alt=""></div>
+          <div><img src="images/350x350.png" alt=""></div>
+          <div><img src="images/350x350.png" alt=""></div>
+          <div><img src="images/350x350.png" alt=""></div>
+          </div>
+      </div>
+    </div>
+
+    <!-- End Portfolio -->
+
+    <!-- Start Contac Me  -->
+
+    <div class="contact">
+      <div class="container">
+        <div class="info">
+          <h2>Contact Me</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+        </div>
+        <div class="form">
+          test
+        </div>
+      </div>
+    </div>
+
+    <!-- End Contac Me  -->
+
+    <!-- Start footer  -->
+
+    <div class="footer">
+      <div class="container">
+        <p>Copyright &copy; 2014 FOCAL - Built with Passion</p>
+      </div>
+    </div>
+    <!-- End Footer -->
   </body>
 </html>
