--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
     <div class="header">
       <div class="slider">
         <div class="container">
-          web & graphic designer
+          <div class="intro">
+            <h2>Web &amp; Graphic Designer </h2>
+            <button>Learn More</button>
+          </div>
         </div>
       </div>
       <div class="navbar">
         <div class="container">
-          <h2>Fo<span>cal</span></h2>
+          <h2>Oub<span>aye</span></h2>
           <ul>
-            <li>Home</li>
-            <li>About Me</li>
-            <li>Skills</li>
-            <li>Resume</li>
-            <li>Testemonials</li>
-            <li>Portfolio</li>
-            <li>Contact Me</li>
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">About Me</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">Resume</a></li>
+            <li><a href="#">Testemonials</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact Me</a></li>
           </ul>
         </div>
       </div>
@@ -182,6 +185,7 @@
         <p>Copyright &copy; 2014 FOCAL - Built with Passion</p>
       </div>
     </div>
+
     <!-- End Footer -->
   </body>
 </html>
