Design The About_Me Section
It Was The Hardest Part.. !
 ~ Finally i'm D0ne With it !!

--- a/index.html
+++ b/index.html
@@ -61,16 +61,49 @@
     <div class="about-me">
       <div class="container">
         <div class="image">
-          <img src="http://placehold.it/300x300" alt="Test Image">
+          <img src="images/About_Me.jpg" alt="Test Image">
         </div>
         <div class="infos">
           <h2>About Me</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua, Ut enim ad minim veniam, quis nostrud, exercitation ullamco laborisexercitation ullamco laboris.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua, Ut enim ad minim veniam.</p>
           <div class="hobbies">
-            <div>Web Design</div>
-            <div>Grafic Design</div>
-            <div>Online Marketing</div>
-            <div>Seo</div>
+            <div class="content">
+              <div class="icon">
+                <img src="images/web_design.png" alt="Web Desing">
+              </div>
+              <div class="text">
+                <h3>Web Design</h3>
+                <p>orem ipsum dolor sit amet, consectetur adipisicing.</p>
+              </div>
+            </div>
+            <div class="content">
+              <div class="icon">
+                <img src="images/earth_globe.png" alt="Web Desing">
+              </div>
+              <div class="text">
+                <h3>Web Design</h3>
+                <p>orem ipsum dolor sit amet, consectetur adipisicing.</p>
+              </div>
+            </div>
+            <div class="content">
+              <div class="icon">
+                <img src="images/marketing.png" alt="Web Desing">
+              </div>
+              <div class="text">
+                <h3>Web Design</h3>
+                <p>orem ipsum dolor sit amet, consectetur adipisicing.</p>
+              </div>
+            </div>
+            <div class="content">
+              <div class="icon">
+                <img src="images/seo.png" alt="Web Desing">
+              </div>
+              <div class="text">
+                <h3>Web Design</h3>
+                <p>orem ipsum dolor sit amet, consectetur adipisicing.</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -182,7 +215,7 @@
 
     <div class="footer">
       <div class="container">
-        <p>Copyright &copy; 2014 FOCAL - Built with Passion</p>
+        <p>Copyright &copy; 2017 Oubaye_Rouaki - Built with Passion</p>
       </div>
     </div>
 
