--- a/index.html
+++ b/index.html
@@ -116,11 +116,29 @@
       <div class="container">
         <div class="skills">
           <h2>My Skills</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua, Ut enim ad minim veniam, quis nostrud.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqu.</p>
           <button>Contact Me</button>
         </div>
         <div class="progress">
-          this is my progress
+          <div class="technique">
+            <h3>Html</h3>
+            <div>
+              <span style="width:90%">90% &nbsp;</span>
+            </div>
+            <h3>Css</h3>
+            <div>
+              <span style="width:70%">70% &nbsp;</span>
+            </div>
+            <h3>Javascript</h3>
+            <div>
+              <span style="width:15%">15% &nbsp;</span>
+            </div>
+            <h3>Photoshop cc</h3>
+            <div>
+              <span style="width:40%">40% &nbsp;</span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
