Design The RESUME Section
Too Easy !

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <h2>My Skills</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua, Ut enim ad minim veniam, quis nostrud.</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqu.</p>
-          <button>Contact Me</button>
+          <button class="my-button">Contact Me</button>
         </div>
         <div class="progress">
           <div class="technique">
@@ -151,7 +151,7 @@
       <div class="container">
         <h2>Resume</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
-        <button>Download Resume</button>
+        <button class="my-button">Download Resume</button>
       </div>
     </div>
     <!-- End Resume -->
