Designing The My_Education Part
it Was A little Long But Easy !
~ a More Progress Again !
~ Keep the Potential UP.

--- a/index.html
+++ b/index.html
@@ -162,19 +162,54 @@
       <div class="container">
         <div class="main">
           <h2>My Education</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua, Ut enim ad minim veniam, quis nostrud.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqu.</p>
         </div>
-        <div class="experience">
-          Some Experience
+        <div class="exp">
+          <div class="certificate">
+            <h3>Grafic Design Diploma</h3>
+            <span><strong>Reeves College</strong> / June 2008 - October 2010 </span>
+            <span>4.0 Gpa</span>
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua, Ut enim ad minim veniam, quis nostrud.</p>
+          </div>
+          <div class="certificate">
+            <h3>CIT Diploma</h3>
+            <span><strong>Lethbridge College</strong> / June 2006 - May 2013 </span>
+            <span>4.0 Gpa</span>
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua, Ut enim ad minim veniam, quis nostrud.</p>
+          </div>
         </div>
         <div class="clearfix"></div>
         <hr>
         <div class="main">
-          <h2>Work Experience</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+          <h2>My Education</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua, Ut enim ad minim veniam, quis nostrud.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqu.</p>
         </div>
-        <div class="experience">
-          Some Experience
+        <div class="exp">
+          <div class="certificate">
+            <h3>Lead Web Designer</h3>
+            <span><strong>ABC Company - Lethbgidge</strong> June 2010 - Present </span>
+            <span>3 Years</span>
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua, Ut enim ad minim veniam, quis nostrud.</p>
+          </div>
+          <div class="certificate">
+            <h3>Junior Designer</h3>
+            <span><strong>XYZ Company - Lethbgidge</strong> June 2007 - March 2014 </span>
+            <span>1 Year</span>
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua, Ut enim ad minim veniam, quis nostrud.</p>
+          </div>
+          <div class="certificate">
+            <h3>Web Developer</h3>
+            <span><strong>The Company - Lethbgidge</strong> February 2017 - September 2017 </span>
+            <span>6 Months</span>
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua, Ut enim ad minim veniam, quis nostrud.</p>
+          </div>
         </div>
       </div>
     </div>
