Design The Testimonials Section
Easy.... !
~ We Are Almost D0ne

--- a/index.html
+++ b/index.html
@@ -220,8 +220,14 @@
 
     <div class="testimonials">
       <div class="container">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
-        <h3>Adel</h3>
+        <q>Lorem ipsum dolor sit amets. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation , consectetur adipisicing elit, sed do  quis nostrud exercitation ullamco laboris.</q>
+        <h3>Adel Khial</h3>
+        <ul>
+          <li></li>
+          <li class="active"></li>
+          <li></li>
+          <li></li>
+        </ul>
       </div>
     </div>
     <!-- End Testimonials -->
