Desing The Portofolio Section
~ T0o easy.. !

--- a/index.html
+++ b/index.html
@@ -239,15 +239,15 @@
         <h2>Portfolio</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
           <div class="our-work">
-          <div><img src="images/350x350.png" alt=""></div>
-          <div><img src="images/350x350.png" alt=""></div>
-          <div><img src="images/350x350.png" alt=""></div>
-          <div><img src="images/350x350.png" alt=""></div>
-          <div><img src="images/350x350.png" alt=""></div>
-          <div><img src="images/350x350.png" alt=""></div>
-          <div><img src="images/350x350.png" alt=""></div>
-          <div><img src="images/350x350.png" alt=""></div>
-          <div><img src="images/350x350.png" alt=""></div>
+          <div><img src="images/portofolio/01.jpg" alt=""></div>
+          <div><img src="images/portofolio/02.jpg" alt=""></div>
+          <div><img src="images/portofolio/03.jpg" alt=""></div>
+          <div><img src="images/portofolio/04.jpg" alt=""></div>
+          <div><img src="images/portofolio/05.jpg" alt=""></div>
+          <div><img src="images/portofolio/06.jpg" alt=""></div>
+          <div><img src="images/portofolio/07.jpg" alt=""></div>
+          <div><img src="images/portofolio/08.jpg" alt=""></div>
+          <div><img src="images/portofolio/03.jpg" alt=""></div>
           </div>
       </div>
     </div>
