Desing The Contact_Me Section !
~ Nice Lo0k !

--- a/index.html
+++ b/index.html
@@ -261,10 +261,27 @@
         <div class="info">
           <h2>Contact Me</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+          <p>
+            122 33rd Street East <br>
+            Saskatoon Sk <br>
+            S7K 1R9
+          </p>
+          <p>
+            <strong>Email:</strong> &nbsp; &nbsp; &nbsp; Me@mail.com <br>
+            <strong>Phone:</strong> &nbsp; &nbsp; &nbsp; 0532023421
+          </p>
         </div>
-        <div class="form">
-          test
-        </div>
+        <form class="form">
+          <label>Name *</label>
+          <input type="text">
+          <label>Email Adress *</label>
+          <input type="text">
+          <label>Phone *</label>
+          <input type="text">
+          <label>Message</label>
+          <textarea rows="8" cols="80"></textarea>
+          <button type="submit">Contact Me</button>
+        </form>
       </div>
     </div>
 
