Desing The Footer Section
I am Done.... !!

--- a/index.html
+++ b/index.html
@@ -292,6 +292,12 @@
     <div class="footer">
       <div class="container">
         <p>Copyright &copy; 2017 Oubaye_Rouaki - Built with Passion</p>
+        <ul>
+          <li><img src="images/Social_Media/facebook.png" alt=""></li>
+          <li><img src="images/Social_Media/twitter.png" alt=""></li>
+          <li><img src="images/Social_Media/linkedin.png" alt=""></li>
+          <li><img src="images/Social_Media/google-plus.png" alt=""></li>
+        </ul>
       </div>
     </div>
 
